--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -20,7 +20,7 @@
   }
   
   .searchButton {
-	background: #ff8c87;
+	background: #ff3502;
 	box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
 	border-radius: 20px;
 	padding: 3px;
