--- a/client/src/components/index.css
+++ b/client/src/components/index.css
@@ -3,7 +3,7 @@
 }
 
 .fire {
-  background-color: #f08030;
+  background-color: #f03a30;
 }
 
 .grass {
@@ -19,7 +19,7 @@
 }
 
 .flying {
-  background-color: #9096f0;
+  background-color: #80acc5d6;
 }
 
 .normal {
