--- a/client/src/components/Details/Details.module.css
+++ b/client/src/components/Details/Details.module.css
@@ -1,5 +1,8 @@
-.pokeball {
+.pokebola {
     height: 200px;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
   }
   
   .poke {
@@ -79,7 +82,7 @@
   
   .contRed {
     display: flex;
-    background-color: #eb544d;
+    background-color: #3a78ea;
     padding: 1rem;
     justify-content: center;
     align-items: center;
@@ -209,7 +212,7 @@
   }
   
   .navBar {
-    background-color: #eb544d;
+    background-color: #3a78ea;
     height: 50px;
     display: flex;
     align-items: center;
@@ -222,8 +225,14 @@
     background-color: transparent;
     border: none;
     font-family: "Rubik", sans-serif;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 500;
+    height: 30px;
+  }
+
+  .buttonHome:hover {
+    background-color: red;
+    border-radius: 10px;
   }
   
   .buttons {
@@ -244,7 +253,7 @@
     cursor: pointer;
     border: none;
     margin-top: 30px;
-    padding: 10px 20px;
+    padding: 10px 100px;
   }
   
   .deleteButton:hover {
