--- a/client/src/components/Footer/footer.module.css
+++ b/client/src/components/Footer/footer.module.css
@@ -1,16 +1,14 @@
 .footer {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    height: 25vh;
-    background-color: #f2f2f2;
-    margin-left: 50px;
+    height: 30px;
+    background-color:transparent;
   }
   
   .footer p {
-    word-spacing: 1px;
-    padding-bottom: 10px;
+    word-spacing: 1.5px;
+    padding-bottom: 15px;
   }
   
   .footer a {
