--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -58,7 +58,7 @@
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    background-color: #eb544d;
+    background-color: #3a78ea;
     max-height: 6rem;
     padding: 0.5rem;
   }
@@ -76,7 +76,7 @@
   }
   
   .plus {
-    background: #ff8c87;
+    background: #ff3502;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     padding: 3px;
@@ -84,7 +84,7 @@
   }
   
   .recargar {
-    background: #ff8c87;
+    background: #ff3502;
     border-radius: 20px;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
     height: 35px;
